chore: upgrade minimum Java version from 11 to 17 and modernize code
- Raise compiler target and CI matrix from Java 11 to Java 17
- Bump project version to 3.1.0-SNAPSHOT (breaking change)
- Apply pattern matching for instanceof (JEP 394)
- Convert switch statements to switch expressions (JEP 361)
- Replace .collect(Collectors.toList()) with .toList()
- Simplify XPathFactory initialization, remove JDK-specific workaround
- Update sample web.xml to Jakarta EE web-app 6.1 namespace